phosh_notifications_sources = [
  'notifications/dbus-notification.c',
  'notifications/dbus-notification.h',
  'notifications/mount-notification.c',
  'notifications/mount-notification.h',
  'notifications/notification.c',
  'notifications/notification.h',
  'notifications/notification-banner.c',
  'notifications/notification-banner.h',
  'notifications/notification-content.c',
  'notifications/notification-content.h',
  'notifications/notification-frame.c',
  'notifications/notification-frame.h',
  'notifications/notification-list.c',
  'notifications/notification-list.h',
  'notifications/notification-source.c',
  'notifications/notification-source.h',
  'notifications/notify-manager.c',
  'notifications/notify-manager.h',
  'notifications/notify-feedback.c',
  'notifications/notify-feedback.h',
  'notifications/timestamp-label.c',
  'notifications/timestamp-label.h',
]
