phosh_notifications_inc = include_directories('.')

phosh_notifications_headers = files(
  'dbus-notification.h',
  'mount-notification.h',
  'notification.h',
  'notification-banner.h',
  'notification-content.h',
  'notification-frame.h',
  'notification-list.h',
  'notification-source.h',
  'notify-manager.h',
  'notify-feedback.h',
  'timestamp-label.h',
)

phosh_notifications_sources = files(
  'dbus-notification.c',
  'mount-notification.c',
  'notification.c',
  'notification-banner.c',
  'notification-content.c',
  'notification-frame.c',
  'notification-list.c',
  'notification-source.c',
  'notify-manager.c',
  'notify-feedback.c',
  'timestamp-label.c',
) + phosh_notifications_headers
