phosh_notifications_inc = include_directories('.')

phosh_notifications_headers = files(
  'dbus-notification.h',
  'mount-notification.h',
  'notification-banner.h',
  'notification-content.h',
  'notification-frame.h',
  'notification-list.h',
  'notification-source.h',
  'notification.h',
  'notify-feedback.h',
  'notify-manager.h',
  'timestamp-label.h',
)

phosh_notifications_sources = files(
  'dbus-notification.c',
  'mount-notification.c',
  'notification-banner.c',
  'notification-content.c',
  'notification-frame.c',
  'notification-list.c',
  'notification-source.c',
  'notification.c',
  'notify-feedback.c',
  'notify-manager.c',
  'timestamp-label.c',
)
